hphp/hack/test/typecheck/class_pointers/get_class_from_type.php.exp
ERROR: File "get_class_from_type.php", line 10, characters 44-49:
Invalid reified hint (Typing[4305])
  File "get_class_from_type.php", line 10, characters 44-49:
  This is not reified, it cannot be used as a reified type argument
  File "reified_generics.hhi", line 28, characters 36-36:
  `T` is reified
